--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apkeyserverv2",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "bitcoinjs-lib": "^5.2.0",
     "express": "^4.17.1",
+    "js-sha3": "^0.5.7",
     "node-fetch": "^2.6.1",
     "socket.io": "^3.1.2",
     "web3": "^1.3.4"
