Push i5: Add BNB support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apkeyserverv2",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bech32": "^1.1.4",
     "bitcoinjs-lib": "^5.2.0",
+    "crypto-js": "^4.0.0",
+    "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "js-sha3": "^0.5.7",
     "node-fetch": "^2.6.1",
@@ -19,5 +22,6 @@
   },
   "engines": {
     "node": ">=15"
-  }
+  },
+  "type": "module"
 }
