--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apkeyserverv2",
-  "version": "2.6.3",
+  "version": "2.7.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "js-sha3": "^0.5.7",
     "node-fetch": "^2.6.1",
+    "semver": "^7.3.5",
     "socket.io": "^3.1.2",
     "web3": "^1.3.4"
   },
