--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apkeyserverv2",
-  "version": "2.8.2",
+  "version": "2.9.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@polkadot/api": "^6.3.1",
+    "@polkadot/util-crypto": "^7.4.1",
     "@solana/web3.js": "^1.29.2",
     "bech32": "^2.0.0",
+    "bip39": "^3.0.4",
     "bitcoinjs-lib": "^5.2.0",
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.4",
