--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apkeyserverv2",
-  "version": "2.10.1",
+  "version": "2.11.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,11 +23,11 @@
     "noble-ed25519": "^1.2.6",
     "node-fetch": "^2.6.1",
     "semver": "^7.3.5",
-    "socket.io": "^3.1.2",
-    "web3": "^1.3.4"
+    "socket.io": "^4.6.2",
+    "web3": "^4.0.1"
   },
   "engines": {
-    "node": ">=15"
+    "node": "^20.0.0"
   },
   "type": "module",
   "devDependencies": {
